# NeMo-Evaluator-Orchestrator

./: .gitignore  README.md  pyproject.toml
config/: benchmark_catalog.yaml  benchmark_suites.yaml  eval_params.yaml  model_config.yaml  selected_benchmarks.yaml
docs/: Architecture.md
src/nemo_evaluator_orchestrator/cli/: _entry_points.py  aggregate_results.py  generate_catalog.py  manage_containers.py  manage_datasets.py  monitor_benchmarks.py  run_all_benchmarks.py  select_benchmarks.py  setup_vllm.py  show_system_status.py
src/nemo_evaluator_orchestrator/utils/: __init__.py  benchmark_utils.py  container_health.py  dataset_utils.py  endpoint_utils.py  paths.py  retry_utils.py  vllm_setup.py  vllm_utils.py
